# ultralytics

./: .gitignore  detect_video.py  main.py  main2.py  pyproject.toml
docs/zh/: index.md  quickstart.md
docs/zh/datasets/: index.md
docs/zh/datasets/classify/: caltech101.md  caltech256.md  cifar10.md  cifar100.md  fashion-mnist.md  imagenet.md  imagenet10.md  imagenette.md  imagewoof.md  index.md  mnist.md
docs/zh/datasets/detect/: african-wildlife.md  argoverse.md  brain-tumor.md  coco.md  coco12-formats.md  coco128.md  coco8-grayscale.md  coco8-multispectral.md  coco8.md  construction-ppe.md  globalwheat2020.md  homeobjects-3k.md  index.md  kitti.md  lvis.md  medical-pills.md  objects365.md  open-images-v7.md  roboflow-100.md  signature.md  sku-110k.md  tt100k.md  visdrone.md  voc.md  xview.md
docs/zh/datasets/explorer/: api.md  dashboard.md  explorer.md  index.md
docs/zh/datasets/obb/: dota-v2.md  dota128.md  dota8.md  index.md
docs/zh/datasets/pose/: coco.md  coco8-pose.md  dog-pose.md  hand-keypoints.md  index.md  tiger-pose.md
docs/zh/datasets/segment/: carparts-seg.md  coco.md  coco128-seg.md  coco8-seg.md  crack-seg.md  index.md  package-seg.md
docs/zh/datasets/track/: index.md
docs/zh/guides/: analytics.md  azureml-quickstart.md  coco-json-training.md  coco-to-yolo.md  conda-quickstart.md  coral-edge-tpu-on-raspberry-pi.md  custom-trainer.md  data-collection-and-annotation.md  deepstream-nvidia-jetson.md  defining-project-goals.md  distance-calculation.md  docker-quickstart.md  end2end-detection.md  export-non-yolo-models.md  finetuning-guide.md  heatmaps.md  hyperparameter-tuning.md  index.md  instance-segmentation-and-tracking.md  isolating-segmentation-objects.md  kfold-cross-validation.md  modal-quickstart.md  model-deployment-options.md  model-deployment-practices.md  model-evaluation-insights.md  model-monitoring-and-maintenance.md  model-testing.md  model-training-tips.md  model-yaml-config.md  nvidia-dali.md  nvidia-dgx-spark.md  nvidia-jetson.md  object-blurring.md  object-counting.md  object-cropping.md  optimizing-openvino-latency-vs-throughput-modes.md  parking-management.md  preprocessing_annotated_data.md  queue-management.md  raspberry-pi.md  (+19 more)
docs/zh/help/: CI.md  CLA.md  FAQ.md  code-of-conduct.md  contributing.md  environmental-health-safety.md  index.md  minimum-reproducible-example.md  privacy.md  security.md
docs/zh/modes/: benchmark.md  export.md  index.md  predict.md  track.md  train.md  val.md
docs/zh/platform/data/: datasets.md
docs/zh/solutions/: index.md
docs/zh/tasks/: classify.md  detect.md  index.md  obb.md  segment.md
docs/zh/usage/: callbacks.md  cfg.md  cli.md  engine.md  python.md  simple-utilities.md
docs/zh/yolov5/: index.md  quickstart_tutorial.md
ultralytics/cfg/datasets/: coco.yaml
ultralytics/cfg/models/: README.md
ultralytics/data/: annotator.py  augment.py  base.py  build.py  converter.py  dataset.py  loaders.py  split.py  split_dota.py  utils.py
ultralytics/engine/: exporter.py  model.py  predictor.py  results.py  trainer.py  tuner.py  validator.py
ultralytics/models/: __init__.py
ultralytics/models/fastsam/: model.py  predict.py  utils.py  val.py
ultralytics/models/nas/: model.py  predict.py  val.py
ultralytics/models/rtdetr/: model.py  predict.py  train.py  val.py
ultralytics/models/sam/: __init__.py  amg.py  build.py  build_sam3.py  model.py  predict.py
ultralytics/models/sam/modules/: blocks.py  decoders.py  encoders.py  memory_attention.py  sam.py  tiny_encoder.py  transformer.py  utils.py
ultralytics/models/sam/sam3/: __init__.py  decoder.py  encoder.py  geometry_encoders.py  maskformer_segmentation.py  model_misc.py  necks.py  sam3_image.py  text_encoder_ve.py  vitdet.py  vl_combiner.py
ultralytics/models/utils/: loss.py  ops.py
ultralytics/models/yolo/: model.py
ultralytics/models/yolo/classify/: predict.py  train.py  val.py
ultralytics/models/yolo/detect/: predict.py  train.py  val.py
ultralytics/models/yolo/obb/: predict.py  train.py  val.py
ultralytics/models/yolo/pose/: predict.py  train.py  val.py
ultralytics/models/yolo/segment/: predict.py  train.py  val.py
ultralytics/models/yolo/world/: train.py  train_world.py
ultralytics/models/yolo/yoloe/: predict.py  train.py  train_seg.py  val.py
ultralytics/nn/: autobackend.py  tasks.py  text_model.py
ultralytics/nn/backends/: __init__.py  axelera.py  base.py  coreml.py  deepx.py  executorch.py  mnn.py  ncnn.py  onnx.py  openvino.py  paddle.py  pytorch.py  rknn.py  tensorflow.py  tensorrt.py  triton.py
ultralytics/nn/modules/: __init__.py  activation.py  block.py  conv.py  head.py  transformer.py  utils.py
ultralytics/optim/: muon.py
ultralytics/solutions/: __init__.py  ai_gym.py  analytics.py  config.py  distance_calculation.py  heatmap.py  instance_segmentation.py  object_blurrer.py  object_counter.py  object_cropper.py  parking_management.py  queue_management.py  region_counter.py  security_alarm.py  similarity_search.py  solutions.py  speed_estimation.py  streamlit_inference.py  trackzone.py  vision_eye.py
ultralytics/utils/: autobatch.py  autodevice.py  benchmarks.py  checks.py  cpu.py  dist.py  downloads.py  errors.py  events.py  files.py  git.py  instance.py  logger.py  loss.py  metrics.py  nms.py  ops.py  patches.py  plotting.py  tal.py  torch_utils.py  tqdm.py  triton.py  tuner.py  uploads.py
