# Ultralytics 🚀 AGPL-3.0 License - https://ultralytics.com/license

# 概述：
# 本 pyproject.toml 文件管理 Ultralytics 库的构建、打包和分发。
# 定义了项目元数据、依赖项以及用于开发和部署库的设置。

# 主要节区：
# - [build-system]：指定构建要求和构建后端（如 setuptools、wheel）。
# - [project]：包含名称、版本、描述、作者、依赖项等详细信息。
# - [project.optional-dependencies]：提供扩展功能的额外可选包。
# - [tool.*]：配置项目中使用的各种工具（pytest、yapf 等）的设置。

# 安装方式：
# 使用命令安装：'pip install ultralytics'
# 开发时可通过可编辑模式安装：'pip install -e .'
# 此方式支持实时修改代码，无需重新安装。

# 文档：
# 完整使用说明请访问：https://docs.ultralytics.com

[build-system]
requires = ["setuptools>=70.0.0,<=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

# 项目设置 -----------------------------------------------------------------------------------------------------
[project]
name = "ultralytics"
dynamic = ["version"]
description = "Ultralytics YOLO 🚀 for SOTA object detection, multi-object tracking, instance segmentation, pose estimation and image classification."
readme = "README.md"
requires-python = ">=3.8"
license = { "text" = "AGPL-3.0" }
keywords = ["machine-learning", "deep-learning", "computer-vision", "ML", "DL", "AI", "YOLO", "YOLOv3", "YOLOv5", "YOLOv8", "YOLOv9", "YOLOv10", "YOLO11", "HUB", "Ultralytics"]
authors = [
    { name = "Glenn Jocher", email = "glenn.jocher@ultralytics.com" },
    { name = "Jing Qiu", email = "jing.qiu@ultralytics.com" },
]
maintainers = [
    { name = "Ultralytics", email = "hello@ultralytics.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]

# 必需依赖项 ------------------------------------------------------------------------------------------------
dependencies = [
    "numpy>=1.23.0",
    "matplotlib>=3.3.0",
    "opencv-python>=4.6.0",
    "pillow>=7.1.2",
    "pyyaml>=5.3.1",
    "requests>=2.23.0",
    "scipy>=1.4.1",
    "torch>=1.8.0",
    "torch>=1.8.0,!=2.4.0; sys_platform == 'win32'", # Windows 上 2.4.0 版本 CPU 报错 https://github.com/ultralytics/ultralytics/issues/15049
    "torchvision>=0.9.0",
    "psutil>=5.8.0", # 系统资源监控
    "polars>=0.20.0",
    "ultralytics-thop>=2.0.18", # FLOPs 计算 https://github.com/ultralytics/thop
]

# 可选依赖项 ------------------------------------------------------------------------------------------------
[project.optional-dependencies]
dev = [
    "ipython",
    "pytest",
    "pytest-cov",
    "coverage[toml]",
    "zensical>=0.0.15; python_version >= '3.10'",
    "mkdocs-ultralytics-plugin>=0.2.4", # 用于元描述、图片、日期和作者信息
    "minijinja>=2.0.0", # 渲染文档宏，无需 mkdocs-macros-plugin
]
export = [
    "numpy<2.0.0", # TF 2.20 兼容性
    "onnx>=1.12.0; platform_system != 'Darwin'", # ONNX 导出
    "onnx>=1.12.0,<1.18.0; platform_system == 'Darwin'",  # MacOS 上 TF 推理卡死（测试至 onnx==1.20.0）
    "onnxslim>=0.1.82",
    "coremltools>=9.0; platform_system != 'Windows' and python_version <= '3.13'", # CoreML 支持 macOS 和 Linux
    "scikit-learn>=1.3.2; platform_system != 'Windows' and python_version <= '3.13'", # CoreML K-Means 量化
    "openvino>=2024.0.0",  # OpenVINO 导出
    "tensorflow>=2.0.0,<=2.19.0", # TF 已知问题 https://github.com/ultralytics/ultralytics/issues/5161
    "tensorflowjs>=2.0.0", # TF.js 导出，会自动安装 tensorflow
    "ydf<0.13.0; platform_machine != 'aarch64'", # ydf>=0.13 使用 protobuf gen 6.x，但 tensorflow<=2.19 要求 protobuf<6
    "tensorstore>=0.1.63; platform_machine == 'aarch64' and python_version >= '3.9'", # 用于树莓派 TF 导出
    "h5py!=3.11.0; platform_machine == 'aarch64'", # 修复 h5py 因 3.11 版本缺少 aarch64 wheel 导致的构建问题
    "setuptools<=81.0.0",  # 固定版本，因为 >=82.0.0 会导致 tensorflow.js 包损坏
    "packaging>=26.0; platform_machine == 'aarch64' and platform_system == 'Linux' and python_version >= '3.9'", # IMX 导出相关 bug
]
solutions = [
    "shapely>=2.0.0",    # 用于点和多边形数据匹配
    "streamlit>=1.51.0; python_version >= '3.10'",    # 用于浏览器中实时推理，如 `yolo streamlit-predict`
    "streamlit>=1.29.0,<1.51.0; python_version < '3.10' and (python_version < '3.9' or platform_machine != 'aarch64' or platform_system != 'Linux')",
    "flask>=3.0.1",  # 用于相似度搜索方案
]
logging = [
    "wandb", # https://docs.ultralytics.com/integrations/weights-biases/
    "tensorboard",  # https://docs.ultralytics.com/integrations/tensorboard/
    "mlflow",  # https://docs.ultralytics.com/integrations/mlflow/
]
extra = [
    "ipython", # 交互式笔记本
    "albumentations>=1.4.6", # 训练数据增强
    "faster-coco-eval>=1.6.7", # COCO 评估指标
]
typing = [
    "scipy-stubs>=1.14.1.4; python_version >= '3.10'",
    "types-pillow",
    "types-psutil",
    "types-pyyaml",
    "types-requests",
    "types-shapely",
]

[project.urls]
"Homepage" = "https://ultralytics.com"
"Source" = "https://github.com/ultralytics/ultralytics"
"Documentation" = "https://docs.ultralytics.com"
"Bug Reports" = "https://github.com/ultralytics/ultralytics/issues"
"Changelog" = "https://github.com/ultralytics/ultralytics/releases"

[project.scripts]
yolo = "ultralytics.cfg:entrypoint"
ultralytics = "ultralytics.cfg:entrypoint"

# 工具设置 -------------------------------------------------------------------------------------------------------
[tool.setuptools]  # setuptools 构建后端的专属配置。
packages = { find = { where = ["."], include = ["ultralytics", "ultralytics.*"] } }
# 下方包含测试文件，用于在 https://github.com/conda-forge/ultralytics-feedstock 中验证 Conda 构建
package-data = { "ultralytics" = ["**/*.yaml", "**/*.sh", "../tests/*.py"], "ultralytics.assets" = ["*.jpg"], "ultralytics.solutions.templates" = ["*.html"]}

[tool.setuptools.dynamic]
version = { attr = "ultralytics.__version__" }

[tool.pytest.ini_options]
addopts = "--doctest-modules --durations=30 --color=yes"
markers = [
    "slow: 跳过慢速测试，除非设置 --slow 选项",
]
norecursedirs = [".git", "dist", "build"]

[tool.coverage.run]
source = ["ultralytics/"]
data_file = "tests/.coverage"
omit = ["ultralytics/utils/callbacks/*"]

[tool.isort]
line_length = 120
multi_line_output = 0

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 2
column_limit = 120
coalesce_brackets = true
spaces_around_power_operator = true
space_between_ending_comma_and_closing_bracket = true
split_before_closing_bracket = false
split_before_first_argument = false

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.docformatter]
wrap-summaries = 120
wrap-descriptions = 120
pre-summary-newline = true
close-quotes-on-newline = true
in-place = true

[tool.codespell]
ignore-words-list = "grey,writeable,finalY,RepResNet,Idenfy,WIT,Smoot,EHR,ROUGE,ALS,iTerm,Carmel,FPR,Hach,Calle,ore,COO,MOT,crate,nd,ned,strack,dota,ane,segway,fo,gool,winn,commend,bloc,nam,afterall,skelton,goin"
skip = "*.pt,*.pth,*.torchscript,*.onnx,*.tflite,*.pb,*.bin,*.param,*.mlmodel,*.engine,*.npy,*.data*,*.csv,*pnnx*,*venv*,*translat*,*lock*,__pycache__*,*.ico,*.jpg,*.png,*.webp,*.avif,*.mp4,*.mov,/runs,/.git,./docs/??/*.md,./docs/mkdocs_??.yml"
